# LangChainTutorial

./: .env  .env.example  .gitignore  LCEL_EXPLANATION.md  QUICK_REFERENCE.md  README.md  main.py  pyproject.toml  react_agent.py  react_agent_2.py  react_search_agent.py  search_agent.py  tools.py
RAG/: retrieval.py
agents/: __init__.py  react_agent.py  react_agent_2.py  react_search_agent.py
chains/: __init__.py  lcel_structured_example.py
core/: __init__.py  schemas.py
langgraph/: custom_graph.py  structured_output.py
langgraph_examples/: __init__.py  chain.py  custom_graph.py  langgraph.json  main.py  nodes.py  react.py  react_agent.py  reflection.py
langgraph_examples/deep_research_agent/: MIGRATION_GUIDE.md  QUICK_START.md  README.md  README_SIMPLIFIED.md  __init__.py  comparison_test.py  deep_research_create_agent.py  deep_research_simplified.py  graph.py  langgraph.json  main.py  schemas.py  test_import_minimal.py  test_simplified_quick.py  test_type_fixes.py  text_parser.py  view_checkpoints.py
langgraph_examples/deep_research_agent/agents/: __init__.py  critic.py  planner.py  (+4 more)
langgraph_examples/reflection_agent/: REFACTORING_SUMMARY.md  __init__.py  chains.py  main.py  schemas.py  text_tool_call_parser.py  tools_executor.py
rag/: __init__.py  ingestion.py  ingestion_with_tavily_rag.py  retrieval.py
reviewing/: prompts.py  react_agent_example.py  schemas.py
reviewing/langgraph_review/: main.py  nodes.py  tools.py
reviewing/rag_reviewing/: crawl_the_doc_baby.py  ingestion_with_rag.py  rag_agent.py
reviewing/retrieval_agent_new/: core.py
(+15 files in other folders)
