[project]
name = "langchaintutorial"
version = "0.1.0"
description = "LangChain & LangGraph tutorial with agents, chains, and RAG examples"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchainhub",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.3.0",
    "grandalf>=0.8",
    "langgraph-cli[inmem]>=0.4.7",
]
